[project]
name = "wodage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "openai-agents>=0.0.7",
    "openai>=1.68.2",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.0",
]
